add analysis results

--- a/2025-02-23_opm_March2024.ipynb
+++ b/2025-02-23_opm_March2024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d85d41d8",
+   "id": "485d904e",
    "metadata": {},
    "source": [
     "# OPM Federal Workforce Fact Data\n",
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d4984b36",
+   "id": "c013804d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "59abf0cb",
+   "id": "4b191922",
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f624434c",
+   "id": "84461372",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4dea7cb9",
+   "id": "e9cce9bb",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d93f55d4",
+   "id": "6cc000d6",
    "metadata": {},
    "source": [
     "# Data"
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "69601e4a",
+   "id": "cafd77bb",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c75001a1",
+   "id": "c637f35f",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f2a39359",
+   "id": "cf785497",
    "metadata": {},
    "outputs": [
     {
@@ -337,9 +337,345 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "abd3225d",
+   "metadata": {},
+   "source": [
+    "# Exploratory Analysis\n",
+    "\n",
+    "- Geographical distribution\n",
+    "- Number of workers by Agency\n",
+    "- Most common job series\n",
+    "- ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "e9de5af8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2278730"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_count = df_fact.shape[0]\n",
+    "total_count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72ed4ce7",
+   "metadata": {},
+   "source": [
+    "## by Number of Employees"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "54b20da7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agy_df=pd.read_csv('DTagy.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "579b405f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# AGYTYP,AGYTYPT,AGY,AGYT,AGYSUB,AGYSUBT\n",
+    "agency_freq=df_fact['AGYSUB'].value_counts().to_frame().reset_index().merge(agy_df, on = 'AGYSUB')\n",
+    "agency_freq['proportion'] = agency_freq['count'] / total_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "5638cc4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AGYSUBT</th>\n",
+       "      <th>count</th>\n",
+       "      <th>proportion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>VATA-VETERANS HEALTH ADMINISTRATION</td>\n",
+       "      <td>432908</td>\n",
+       "      <td>0.189978</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>TR93-INTERNAL REVENUE SERVICE</td>\n",
+       "      <td>93937</td>\n",
+       "      <td>0.041223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AF1M-AIR FORCE MATERIEL COMMAND</td>\n",
+       "      <td>70084</td>\n",
+       "      <td>0.030756</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>HSBD-CUSTOMS AND BORDER PROTECTION</td>\n",
+       "      <td>65268</td>\n",
+       "      <td>0.028642</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>HSBC-TRANSPORTATION SECURITY ADMINISTRATION</td>\n",
+       "      <td>62788</td>\n",
+       "      <td>0.027554</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>SZ00-SOCIAL SECURITY ADMINISTRATION</td>\n",
+       "      <td>59227</td>\n",
+       "      <td>0.025991</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>DD83-MILITARY TREATMENT FACILITIES UNDER DHA</td>\n",
+       "      <td>45754</td>\n",
+       "      <td>0.020079</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>TD03-FEDERAL AVIATION ADMINISTRATION</td>\n",
+       "      <td>45306</td>\n",
+       "      <td>0.019882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>ARCE-U.S. ARMY CORPS OF ENGINEERS</td>\n",
+       "      <td>38079</td>\n",
+       "      <td>0.016711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>DJ02-FEDERAL BUREAU OF INVESTIGATION</td>\n",
+       "      <td>37394</td>\n",
+       "      <td>0.016410</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        AGYSUBT   count  proportion\n",
+       "0           VATA-VETERANS HEALTH ADMINISTRATION  432908    0.189978\n",
+       "1                 TR93-INTERNAL REVENUE SERVICE   93937    0.041223\n",
+       "2               AF1M-AIR FORCE MATERIEL COMMAND   70084    0.030756\n",
+       "3            HSBD-CUSTOMS AND BORDER PROTECTION   65268    0.028642\n",
+       "4   HSBC-TRANSPORTATION SECURITY ADMINISTRATION   62788    0.027554\n",
+       "5           SZ00-SOCIAL SECURITY ADMINISTRATION   59227    0.025991\n",
+       "6  DD83-MILITARY TREATMENT FACILITIES UNDER DHA   45754    0.020079\n",
+       "7          TD03-FEDERAL AVIATION ADMINISTRATION   45306    0.019882\n",
+       "8             ARCE-U.S. ARMY CORPS OF ENGINEERS   38079    0.016711\n",
+       "9          DJ02-FEDERAL BUREAU OF INVESTIGATION   37394    0.016410"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Top 10 agencies by number of employees\n",
+    "agency_freq[['AGYSUBT','count','proportion']].head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3e879a0",
+   "metadata": {},
+   "source": [
+    "## by Job Series (Occupation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "18ab204a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "occ = pd.read_csv('DTocc.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "6a8da421",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "occ_freq=df_fact[['OCC']].value_counts().to_frame().reset_index().merge(occ, on='OCC')\n",
+    "occ_freq['proportion'] = occ_freq['count'] / total_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "07b7c7f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>OCCT</th>\n",
+       "      <th>count</th>\n",
+       "      <th>proportion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0301-MISCELLANEOUS ADMINISTRATION AND PROGRAM</td>\n",
+       "      <td>111418</td>\n",
+       "      <td>0.048895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0610-NURSE</td>\n",
+       "      <td>111303</td>\n",
+       "      <td>0.048844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2210-INFORMATION TECHNOLOGY MANAGEMENT</td>\n",
+       "      <td>99051</td>\n",
+       "      <td>0.043468</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0343-MANAGEMENT AND PROGRAM ANALYSIS</td>\n",
+       "      <td>94333</td>\n",
+       "      <td>0.041397</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1802-COMPLIANCE INSPECTION AND SUPPORT</td>\n",
+       "      <td>55782</td>\n",
+       "      <td>0.024479</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0303-MISCELLANEOUS CLERK AND ASSISTANT</td>\n",
+       "      <td>48493</td>\n",
+       "      <td>0.021281</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0905-GENERAL ATTORNEY</td>\n",
+       "      <td>44317</td>\n",
+       "      <td>0.019448</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1811-CRIMINAL INVESTIGATION</td>\n",
+       "      <td>44171</td>\n",
+       "      <td>0.019384</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1102-CONTRACTING</td>\n",
+       "      <td>43549</td>\n",
+       "      <td>0.019111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0679-MEDICAL SUPPORT ASSISTANCE</td>\n",
+       "      <td>42599</td>\n",
+       "      <td>0.018694</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            OCCT   count  proportion\n",
+       "0  0301-MISCELLANEOUS ADMINISTRATION AND PROGRAM  111418    0.048895\n",
+       "1                                     0610-NURSE  111303    0.048844\n",
+       "2         2210-INFORMATION TECHNOLOGY MANAGEMENT   99051    0.043468\n",
+       "3           0343-MANAGEMENT AND PROGRAM ANALYSIS   94333    0.041397\n",
+       "4         1802-COMPLIANCE INSPECTION AND SUPPORT   55782    0.024479\n",
+       "5         0303-MISCELLANEOUS CLERK AND ASSISTANT   48493    0.021281\n",
+       "6                          0905-GENERAL ATTORNEY   44317    0.019448\n",
+       "7                    1811-CRIMINAL INVESTIGATION   44171    0.019384\n",
+       "8                               1102-CONTRACTING   43549    0.019111\n",
+       "9                0679-MEDICAL SUPPORT ASSISTANCE   42599    0.018694"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# top 10 occupations\n",
+    "occ_freq[['OCCT','count','proportion']].head(10)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c133538",
+   "id": "f594c180",
    "metadata": {},
    "outputs": [],
    "source": []
