add location distribution

--- a/2025-02-23_opm_March2024.ipynb
+++ b/2025-02-23_opm_March2024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "485d904e",
+   "id": "854105b6",
    "metadata": {},
    "source": [
     "# OPM Federal Workforce Fact Data\n",
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c013804d",
+   "id": "552514b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4b191922",
+   "id": "ea878c08",
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "84461372",
+   "id": "9fb6af84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e9cce9bb",
+   "id": "2dff5af7",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cc000d6",
+   "id": "098ca7dd",
    "metadata": {},
    "source": [
     "# Data"
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "cafd77bb",
+   "id": "a2c6b6be",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c637f35f",
+   "id": "6fa36122",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "cf785497",
+   "id": "83ee6994",
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abd3225d",
+   "id": "f8ebe272",
    "metadata": {},
    "source": [
     "# Exploratory Analysis\n",
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "e9de5af8",
+   "id": "7cf1211c",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72ed4ce7",
+   "id": "b8d63079",
    "metadata": {},
    "source": [
     "## by Number of Employees"
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "54b20da7",
+   "id": "8c337d71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "579b405f",
+   "id": "1c82e85f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "5638cc4e",
+   "id": "4c1e5b65",
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3e879a0",
+   "id": "cab1539a",
    "metadata": {},
    "source": [
     "## by Job Series (Occupation)"
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "18ab204a",
+   "id": "ac4e997e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "6a8da421",
+   "id": "5878f2cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "07b7c7f0",
+   "id": "b180a531",
    "metadata": {},
    "outputs": [
     {
@@ -673,9 +673,247 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8d03cce1",
+   "metadata": {},
+   "source": [
+    "## by Location"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "3dc56794",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loc = pd.read_csv('DTloc.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "03fb4820",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LOCTYP</th>\n",
+       "      <th>LOCTYPT</th>\n",
+       "      <th>LOC</th>\n",
+       "      <th>LOCT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>01</td>\n",
+       "      <td>01-ALABAMA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>02</td>\n",
+       "      <td>02-ALASKA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>04</td>\n",
+       "      <td>04-ARIZONA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>05</td>\n",
+       "      <td>05-ARKANSAS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>06</td>\n",
+       "      <td>06-CALIFORNIA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   LOCTYP        LOCTYPT LOC           LOCT\n",
+       "0       1  United States  01     01-ALABAMA\n",
+       "1       1  United States  02      02-ALASKA\n",
+       "2       1  United States  04     04-ARIZONA\n",
+       "3       1  United States  05    05-ARKANSAS\n",
+       "4       1  United States  06  06-CALIFORNIA"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loc.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "fed5aa2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loc_freq=df_fact[['LOC']].value_counts().\\\n",
+    "to_frame().reset_index().merge(loc[['LOCTYP','LOC','LOCT']], on = 'LOC')\n",
+    "loc_freq['proportion'] = loc_freq['count'] / total_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "4e682a2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loc_freq_us = loc_freq.loc[loc_freq['LOCTYP']==1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "2e97ef1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loc_freq_us_50st = loc_freq_us.loc[loc_freq_us['LOC'] != 'US']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "563185ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LOC</th>\n",
+       "      <th>count</th>\n",
+       "      <th>LOCTYP</th>\n",
+       "      <th>LOCT</th>\n",
+       "      <th>proportion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11</td>\n",
+       "      <td>162144</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11-DISTRICT OF COLUMBIA</td>\n",
+       "      <td>0.071155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>06</td>\n",
+       "      <td>147487</td>\n",
+       "      <td>1</td>\n",
+       "      <td>06-CALIFORNIA</td>\n",
+       "      <td>0.064723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>51</td>\n",
+       "      <td>144483</td>\n",
+       "      <td>1</td>\n",
+       "      <td>51-VIRGINIA</td>\n",
+       "      <td>0.063405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>24</td>\n",
+       "      <td>142876</td>\n",
+       "      <td>1</td>\n",
+       "      <td>24-MARYLAND</td>\n",
+       "      <td>0.062700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>48</td>\n",
+       "      <td>129738</td>\n",
+       "      <td>1</td>\n",
+       "      <td>48-TEXAS</td>\n",
+       "      <td>0.056934</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  LOC   count  LOCTYP                     LOCT  proportion\n",
+       "1  11  162144       1  11-DISTRICT OF COLUMBIA    0.071155\n",
+       "2  06  147487       1            06-CALIFORNIA    0.064723\n",
+       "3  51  144483       1              51-VIRGINIA    0.063405\n",
+       "4  24  142876       1              24-MARYLAND    0.062700\n",
+       "5  48  129738       1                 48-TEXAS    0.056934"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loc_freq_us_50st.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f594c180",
+   "id": "0c7a84cf",
    "metadata": {},
    "outputs": [],
    "source": []
