needs more work on mapping

--- a/2025-02-23_opm_March2024.ipynb
+++ b/2025-02-23_opm_March2024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c297b490",
+   "id": "e4c05308",
    "metadata": {},
    "source": [
     "# OPM Federal Workforce Fact Data\n",
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "210a5323",
+   "id": "7e80d1ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "63924818",
+   "id": "560532fd",
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "baf10558",
+   "id": "78bcb995",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "199811a3",
+   "id": "4dac49df",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39f68649",
+   "id": "bca1f53d",
    "metadata": {},
    "source": [
     "# Data"
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "005a64f0",
+   "id": "3defac89",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "756671b8",
+   "id": "c25d94a2",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "39d6219a",
+   "id": "058d062f",
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "732765bb",
+   "id": "51109b26",
    "metadata": {},
    "source": [
     "# Exploratory Analysis\n",
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9c89e996",
+   "id": "11f601cc",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ce793ab",
+   "id": "6f86ccf6",
    "metadata": {},
    "source": [
     "## by Number of Employees"
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "09b8e9ca",
+   "id": "d8e56012",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7ae81d8e",
+   "id": "e848538f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "126d9dd1",
+   "id": "6c27ab9e",
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3247a90",
+   "id": "155f7d3c",
    "metadata": {},
    "source": [
     "## by Job Series (Occupation)"
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "241a5cc5",
+   "id": "3f6ae79b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2580ec16",
+   "id": "eb3d5eb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5f5d2e96",
+   "id": "95a52a8d",
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31e9e2b8",
+   "id": "273266bb",
    "metadata": {},
    "source": [
     "## by Location"
@@ -683,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a5731d4e",
+   "id": "d2ac8045",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a61c11eb",
+   "id": "9c3eedb3",
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8284437a",
+   "id": "e5267261",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e100dfdc",
+   "id": "56d37d14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "df4e9826",
+   "id": "759d1018",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "8b5ced3f",
+   "id": "abaa9803",
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ff87bd7c",
+   "id": "6d0088c3",
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3c23638d",
+   "id": "0e8bafec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "196c74ba",
+   "id": "af29a219",
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "c03b6403",
+   "id": "566611bf",
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "dcfddcd6",
+   "id": "478ab7ce",
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "a3593054",
+   "id": "27461811",
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1033,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "a5ebecbc",
+   "id": "b40f15de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1047,7 +1047,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "eb7b4918",
+   "id": "9a3fb871",
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "1e54fafe",
+   "id": "fa6df624",
    "metadata": {},
    "outputs": [
     {
@@ -1090,34 +1090,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "7f3db90b",
+   "execution_count": 46,
+   "id": "c785f91f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/tiangeng/Documents/python_files/opm_mar2024'"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "os.getcwd()"
+    "#loc_us_50st_dbf_full.to_file('st_distribution_us_only.shp')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a10a696",
+   "id": "81fcbcbc",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "loc_us_50st_dbf_full.to_file('st_distribution_us_only.shp')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
